--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5003
-BACKEND_URL=http://localhost:5003
+BACKEND_URL=https://im-hpgy.onrender.com
 CLIENT_URL=https://host-ng.web.app
 
 # Database
